--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "^5.1.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "typescript": "~3.7.2"
+    "@typescript-eslint/eslint-plugin": "2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "eslint": "6.8.0",
+    "eslint-config-vtex-react": "^6.7.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-unicorn": "^21.0.0",
+    "prettier": "1.19.1",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "eslint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "browserslist": {
     "production": [
